--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/firefoxos.js?LRJAC=443020064"></script>
+        <script type="text/javascript" src="html5game/firefoxos.js?EQYZB=792135822"></script>
     </body>
 </html>
